# GluaX

./: Cargo.toml  README.md
gluax-syntax/: package.json
gluax-syntax/syntaxes/: gluax.tmLanguage.json
src/: main.rs  test.gluax
src/diagnostics/: mod.rs
src/lexer/: keyword.rs  mod.rs  punct.rs
src/parser/: mod.rs
